--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
-    <link rel="stylesheet" href="script.css">
+    <link rel="stylesheet" href="style.css">
     <link id="favicon" rel="icon" href="https://raw.githubusercontent.com/koushikpuppala5/Koushikpuppala5/Master/0cc7o4l5r6fppuh3jju66ujsln-8fd1e7ae8755ac45ffa0dc076b5c1315.png" type="image/x-icon">
 </head>
 <body>
-        <h1> Puppala Koushik Bio </h1>
+        <h1> Puppala Koushik </h1>
 </body>
 </html>
