--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link id="favicon" rel="icon" href="https://raw.githubusercontent.com/koushikpuppala5/Koushikpuppala5/Master/0cc7o4l5r6fppuh3jju66ujsln-8fd1e7ae8755ac45ffa0dc076b5c1315.png" type="image/x-icon">
 </head>
 <body>
+
+    <header>
         <h1> Puppala Koushik </h1>
+    </header>
+
+    <h2>About</h2>
+    
+    <p>I am a student of Bachelor of Technology in Computer Science and Engineering at Indian Institute of Information Technology Raichur, which is under the Indian Institute of Technology Hyderabad.</p>
+    <p1>My Home town is Rajahmundry, Andhra Pradesh, and belongs to a middle-class family. I have learned so many things from my past and surrendering peoples.</p1>
+
 </body>
 </html>
