--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
     <meta name="google-site-verification" content="4XAIU4YShE7NbMN9SVQrDgvRQ-YYhRDVPOjTv7JJpOE" />
     <link rel="stylesheet" href="style.css">
-    <link id="favicon" rel="icon" href="Images/RedK.png" type="image/x-icon">
+    <link id="favicon" rel="icon" href="/Images/RedK.png" type="image/x-icon">
 </head>
 <body>
 
