--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZKB8W63QD"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3ZKB8W63QD');
+    </script>
+    <meta content="Koushik Puppala is student at IIIT Raichur, which is under IIT Hyderabad. He is persuing b.tech from CSE Department" name="descriptison">
+    <meta content="Koushik Puppala | IIIT Raichur | IIT Hyderabad | Hyderabad | Rajahmundry | IIITR | IITH " name="keywords">
+
+    <!-- Favicons -->
+    <link href="Images/RedK.png" rel="icon">
+    <link href="Images/RedK.png" rel="apple-touch-icon">
     <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
     <meta name="google-site-verification" content="4XAIU4YShE7NbMN9SVQrDgvRQ-YYhRDVPOjTv7JJpOE" />
     <link rel="stylesheet" href="style.css">
-    <link id="favicon" rel="icon" href="Images/RedK.png" type="image/x-icon">
 </head>
 <body>
 
