--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
+    <meta name="google-site-verification" content="4XAIU4YShE7NbMN9SVQrDgvRQ-YYhRDVPOjTv7JJpOE" />
     <link rel="stylesheet" href="style.css">
     <link id="favicon" rel="icon" href="https://raw.githubusercontent.com/koushikpuppala5/Koushikpuppala5/Master/0cc7o4l5r6fppuh3jju66ujsln-8fd1e7ae8755ac45ffa0dc076b5c1315.png" type="image/x-icon">
 </head>
