--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>About</h2>
     
     <p>I am a student of Bachelor of Technology in Computer Science and Engineering at Indian Institute of Information Technology Raichur, which is under the Indian Institute of Technology Hyderabad.</p>
-    <p>My Home town is Rajahmundry, Andhra Pradesh, and belongs to a middle-class family. I have learned so many things from my past and surrendering peoples.</p>
+    <p>My Home town is Rajahmundry, Andhra Pradesh, and belongs to a middle-class family. I have learned so many things from my past and surrounding peoples.</p>
 
 </body>
 </html>
