--- a/index.html
+++ b/index.html
@@ -14,15 +14,40 @@
     </script>
     <meta content="Koushik Puppala is student at IIIT Raichur, which is under IIT Hyderabad. He is persuing b.tech from CSE Department" name="descriptison">
     <meta content="Koushik Puppala | IIIT Raichur | IIT Hyderabad | Hyderabad | Rajahmundry | IIITR | IITH " name="keywords">
+    <meta content="Koushik Puppala | IIIT Raichur | IIT Hyderabad | Hyderabad | Rajahmundry | IIITR | IITH " name="tag">
 
     <!-- Favicons -->
     <link href="Images/RedK.png" rel="icon">
     <link href="Images/RedK.png" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
+
+  <!-- Font awesome -->
+  <script src="https://use.fontawesome.com/e93a6decc6.js"></script>
+
     <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script>
+     AOS.init();
+  </script>
     <meta name="google-site-verification" content="4XAIU4YShE7NbMN9SVQrDgvRQ-YYhRDVPOjTv7JJpOE" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav id="main-nav">
+        <div class="row">
+          <div class="container">
+    
+            <div class="logo">
+              <a href="index.html"><img src="Images/RedK.png" style="width:40px; height:40px" alt="Koushik Puppala | IIIT Raichur | IIT Hyderabad | CSE Department | Rajahmundry | Hyderabad | Raichur" ></a>
+            </div>
+
+            <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
+
+          </div>
+        </div>
+      </nav>
 
     <h1> Puppala Koushik </h1>
 
