--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
     <link href="Images/RedK.png" rel="apple-touch-icon">
     <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
+  
+    <!-- Google Tag Manager -->
 
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+
+})(window,document,'script','dataLayer','GTM-KWBGH9Q');</script>
+
+<!-- End Google Tag Manager -->
   <!-- Font awesome -->
   <script src="https://use.fontawesome.com/e93a6decc6.js"></script>
 
@@ -34,6 +47,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+    <!-- Google Tag Manager (noscript) -->
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KWBGH9Q"
+
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
+<!-- End Google Tag Manager (noscript) -->
 
     <nav id="main-nav">
         <div class="row">
