--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
         <div class="container">
             <div class="hero-content">
                 <br /><br /><br /><br /><br />
-                <b><h1>KOUSHIK</h1></b>
-                <b><h1>A <span class="typed"></span></h1></b>
-                <b><p class="typed-items" data-typed-person="">Coder, Student, Developer, Learner</p></b>
+                <h1>KOUSHIK<br />A &nbsp;<span class="typed"></span></h1>
+                <p class="typed-items" data-typed-person="">Coder, Student, Developer, Learner</p>
             </div>
         </div>
     </div>
@@ -123,7 +122,9 @@
                     <div class="col-lg-4 ">
                         <div class="div-img-bg">
                             <div class="about-img">
-                                <img src="Images/RedK.png" class="img-responsive" alt=" Profile |koushikpuppala| IIIT Raichur | IIT Hyderabad | CSE Department | Hyderabad | Raichur">
+                                <aside>
+                                    <img height="200px" src="Images/RedK.png" class="img-responsive" alt=" Profile |koushikpuppala| IIIT Raichur | IIT Hyderabad | CSE Department | Hyderabad | Raichur">
+                                </aside>
                             </div>
                         </div>
                     </div>
@@ -151,7 +152,6 @@
                             <div class="contact-contact">
 
                                 <h2 class="mb-30">GET IN TOUCH</h2>
-
                                 <ul class="contact-details">
                                     <li><span>Rajahmundry<br>Andhra Pradesh</span></li>
                                     <li><span>IIIT Raichur,Karnataka</span></li>
