--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
         <div class="container">
             <div class="hero-content">
-                <br /><br /><br /><br /><br />
-                <h1>KOUSHIK<br />A &nbsp;<span class="typed"></span></h1>
+                <br /><br /><br /><br />
+                <h1>KOUSHIK<br />A <span class="typed"></span></h1>
                 <p class="typed-items" data-typed-person="">Coder, Student, Developer, Learner</p>
             </div>
         </div>
