--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
 
     <!-- Search Engine tags -->
-    <meta content="Koushik Puppala is student at IIIT Raichur, which is under IIT Hyderabad. He is persuing b.tech from CSE Department" name="description">
+    <meta content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department" name="description">
     <meta content="Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
     <meta content="Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
     <meta content="Puppala Koushik" name="author">
@@ -57,7 +57,7 @@
     <meta name="google-site-verification" content="4XAIU4YShE7NbMN9SVQrDgvRQ-YYhRDVPOjTv7JJpOE" />
 
     <!-- Font awesome -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -118,9 +118,9 @@
         <div id="about" class="paddsection">
             <div class="container">
                 <div class="row justify-content-between">
+                    <div class="div-img-bg">
 
-                    <div class="col-lg-4 ">
-                        <div class="div-img-bg">
+                        <div class="col-lg-4 ">
                             <div class="about-img">
                                 <aside>
                                     <img height="200px" src="Images/RedK.png" class="img-responsive" alt=" Profile |koushikpuppala| IIIT Raichur | IIT Hyderabad | CSE Department | Hyderabad | Raichur">
@@ -143,7 +143,8 @@
         </div>
         <!-- End About Section -->
         <!-- ======= Contact Section ======= -->
-        <br /><br /><br />
+        <br /><br /><br /><br /><br /><br /><br />
+        <br /><br /><br /><br /><br /><br /><br />
         <div id="contact" class="paddsection">
             <div class="container">
                 <div class="contact-block1">
@@ -152,11 +153,14 @@
                         <div class="col-lg-6">
                             <div class="contact-contact">
 
-                                <h2 class="mb-30">GET IN TOUCH</h2>
+                                <h2 class="mb-30"><b><i>GET IN TOUCH</i></b></h2>
                                 <ul class="contact-details">
-                                    <li><span>Rajahmundry<br>Andhra Pradesh</span></li>
-                                    <li><span>IIIT Raichur,Karnataka</span></li>
-                                    <li><span>koushikpuppala203@gmail.com<br>cs20b1015@iiitr.ac.in</span></li>
+                                    <li><span><span style="color:black"><b><i>My Home town:-</i></b></span><br>Rajahmundry<br>Andhra Pradesh</span>
+                                    </li>
+                                    <li><span><span style="color:black"><b><i>College location:-</i></b></span><br>IIIT Raichur<br>Karnataka</span>
+                                    </li>
+                                    <li><span><span style="color:black"><b><i>Email ID:-</i></b></span><br>koushikpuppala203@gmail.com<br>cs20b1015@iiitr.ac.in</span>
+                                    </li>
                                 </ul>
 
                             </div>
