--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="hero-content">
                 <br /><br /><br /><br />
                 <h1>KOUSHIK<br />A <span class="typed"></span></h1>
-                <p class="typed-items" data-typed-person="">Coder, Student, Developer, Learner</p>
+                <p class="typed-items" data-typed-person="">Student, Learner, Coder, Developer</p>
             </div>
         </div>
     </div>
