--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 
                 <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
+                <ul class="nav-menu list-unstyled">
+                    <li><a href="#hero" class="smoothScroll">Home</a></li>
+                    <li><a href="#about" class="smoothScroll">About</a></li>
+                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                </ul>
+
             </div>
         </div>
     </nav>
@@ -123,7 +129,7 @@
                         <div class="col-lg-4 ">
                             <div class="about-img">
                                 <aside>
-                                    <img height="200px" src="Images/RedK.png" class="img-responsive" alt=" Profile |koushikpuppala| IIIT Raichur | IIT Hyderabad | CSE Department | Hyderabad | Raichur">
+                                    <img src="Images/RedK.png" class="img-responsive" alt=" Profile |koushikpuppala| IIIT Raichur | IIT Hyderabad | CSE Department | Hyderabad | Raichur">
                                 </aside>
                             </div>
                         </div>
@@ -155,11 +161,11 @@
 
                                 <h2 class="mb-30"><b><i>GET IN TOUCH</i></b></h2>
                                 <ul class="contact-details">
-                                    <li><span><span style="color:black"><b><i>My Home town:-</i></b></span><br>Rajahmundry<br>Andhra Pradesh</span>
+                                    <li><span><span style="color:black;"><b><i>My Home town:-</i></b></span><br>Rajahmundry<br>Andhra Pradesh</span>
                                     </li>
-                                    <li><span><span style="color:black"><b><i>College location:-</i></b></span><br>IIIT Raichur<br>Karnataka</span>
+                                    <li><span><span style="color:black;"><b><i>College location:-</i></b></span><br>IIIT Raichur<br>Karnataka</span>
                                     </li>
-                                    <li><span><span style="color:black"><b><i>Email ID:-</i></b></span><br>koushikpuppala203@gmail.com<br>cs20b1015@iiitr.ac.in</span>
+                                    <li><span><span style="color:black;"><b><i>Email ID:-</i></b></span><br>koushikpuppala203@gmail.com<br>cs20b1015@iiitr.ac.in</span>
                                     </li>
                                 </ul>
 
@@ -172,34 +178,34 @@
 
                                     <div class="col-lg-6">
                                         <div class="form-group contact-block1">
-                                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                            <input style="width: 32.25% ; height: 50px; float: left;" type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                            <input style="width: 32.25% ; height: 50px; float: left; " type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                            <input style="width: 66.25% ; height: 50px; float: left; " type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <textarea class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                            <textarea style="width: 66.25% ;height: 250px; float: left; " class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-12">
-                                        <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                                        <input style="width: fit-content ; text-align: center ; font-style: oblique;" type="submit" class="btn btn-defeault btn-send" value="Send message">
                                     </div>
 
                                 </div>
@@ -225,6 +231,8 @@
                         <li><a href="https://www.instagram.com/koushikpuppala"><i class="ion-social-instagram"></i></a></li>
                         <li><a href="https://www.github.com/puppalakoushik"><i class="ion-social-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/puppalakoushik"><i class="ion-social-linkedin"></i></a></li>
+                        <li>
+                            <a href="https://twitter.com/puppala_koushik"><i class="ion-social-twitter"></i></a></li>
                     </h1>
                 </ul>
 
