--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
                         <li><a href="https://www.instagram.com/koushikpuppala"><i class="ion-social-instagram"></i></a></li>
                         <li><a href="https://www.github.com/puppalakoushik"><i class="ion-social-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/puppalakoushik"><i class="ion-social-linkedin"></i></a></li>
-                        <li>
-                            <a href="https://twitter.com/puppala_koushik"><i class="ion-social-twitter"></i></a></li>
+                        <li><a href="https://twitter.com/puppala_koushik"><i class="ion-social-twitter"></i></a></li>
                     </h1>
                 </ul>
+                <p style="width:max-content; text-align:center; margin-left: 43%;">&copy;Copyright 2021, PuppalaKoushik</p>
 
             </div>
 
