--- a/index.html
+++ b/index.html
@@ -178,34 +178,34 @@
 
                                     <div class="col-lg-6">
                                         <div class="form-group contact-block1">
-                                            <input style="width: 32.25% ; height: 50px; float: left;" type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                            <input style="width: 35.75% ; height: 50px; float: left;" type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            <input style="width: 32.25% ; height: 50px; float: left; " type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                            <input style="width: 35.75% ; height: 50px; float: left; " type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <input style="width: 66.25% ; height: 50px; float: left; " type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                            <input style="width: 73.25% ; height: 50px; float: left; " type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <textarea style="width: 66.25% ;height: 250px; float: left; " class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                            <textarea style="width: 73.25% ;height: 250px; float: left; " class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                                             <div class="validate"></div>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-12">
-                                        <input style="width: fit-content ; text-align: center ; font-style: oblique;" type="submit" class="btn btn-defeault btn-send" value="Send message">
+                                        <input style="width: max-content ; text-align: center ; font-style: oblique;" type="submit" class="btn btn-defeault btn-send" value="Send message">
                                     </div>
 
                                 </div>
@@ -234,7 +234,7 @@
                         <li><a href="https://twitter.com/puppala_koushik"><i class="ion-social-twitter"></i></a></li>
                     </h1>
                 </ul>
-                <p style="width:max-content; text-align:center; margin-left: 43%;">&copy;Copyright 2021, PuppalaKoushik</p>
+                <p>&copy;Copyright 2021, PuppalaKoushik</p>
 
             </div>
 
