--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         gtag('config', 'G-3ZKB8W63QD');
     </script>
 
+    <meta name="google-site-verification" content="CcAefbaEaUJPAou8hxFNMDdOXrnPABiEjKMBcRGF20Q" />
     <meta name="google-site-verification" content="4XAIU4YShE7NbMN9SVQrDgvRQ-YYhRDVPOjTv7JJpOE" />
 
     <!-- Font awesome -->
