--- a/index.html
+++ b/index.html
@@ -93,14 +93,6 @@
                     <a href="index.html"><img src="Images/RedK.png" alt="Puppala Koushik | IIIT Raichur | IIT Hyderabad | CSE Department | Rajahmundry | Hyderabad | Raichur"></a>
                 </div>
 
-                <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
-
-                <ul class="nav-menu list-unstyled">
-                    <li><a href="#hero" class="smoothScroll">Home</a></li>
-                    <li><a href="#about" class="smoothScroll">About</a></li>
-                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
-                </ul>
-
             </div>
         </div>
     </nav>
@@ -172,51 +164,64 @@
 
                             </div>
                         </div>
-
-                        <div class="col-lg-6">
-                            <form method="post" action="https://formspree.io/f/mnqownvq" role="form" class="">
-                                <div class="row">
-
-                                    <div class="col-lg-6">
-                                        <div class="form-group contact-block1">
-                                            <input style="width: 35.75% ; height: 50px; float: left;" type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                            <div class="validate"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <input style="width: 35.75% ; height: 50px; float: left; " type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                            <div class="validate"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <input style="width: 73.25% ; height: 50px; float: left; " type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                            <div class="validate"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <textarea style="width: 73.25% ;height: 250px; float: left; " class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                                            <div class="validate"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-12">
-                                        <input style="width: max-content ; text-align: center ; font-style: oblique;" type="submit" class="btn btn-defeault btn-send" value="Send message">
-                                    </div>
-
-                                </div>
-                            </form>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- End Contact Section -->
+
+        <!-- See more examples of how to use Formbutton at formspree.io/formbutton/docs -->
+
+        <script src="https://formspree.io/js/formbutton-v1.0.4.min.js" defer></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
+        <script>
+            window.formbutton = window.formbutton || function() {
+                (formbutton.q = formbutton.q || []).push(arguments)
+            };
+            formbutton("create", {
+                action: "https://formspree.io/f/xyybojaq",
+                title: "Get in Touch",
+                buttonImg: "<i class='fas fa-comment' style='font-size:30px'/>",
+                description: "We'll get back to you as soon as possible.",
+                styles: {
+                    fontFamily: '"Lato", sans-serif',
+                    button: {
+                        background: "skyblue"
+                    },
+                    title: {
+                        letterSpacing: "0.1em",
+                        textTransform: "uppercase",
+                    },
+                },
+                fields: [{
+                    name: "Name",
+                    type: "text",
+                    label: "Your Name:",
+                    placeholder: "Name",
+                    required: true,
+                }, {
+                    name: "Email",
+                    type: "email",
+                    label: "Your Email:",
+                    placeholder: "Email",
+                    required: true,
+                }, {
+                    name: "Subject",
+                    type: "text",
+                    label: "Subject",
+                    placeholder: "Subject",
+                    required: true,
+                }, {
+                    name: "Message",
+                    type: "textarea",
+                    label: "Message",
+                    placeholder: "Message",
+                    required: true,
+                }, {
+                    type: "submit",
+                }],
+            });
+        </script>
 
     </main>
     <!-- End #main -->
