--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 (formbutton.q = formbutton.q || []).push(arguments)
             };
             formbutton("create", {
-                action: "https://formspree.io/f/xyybojaq",
+                action: "https://formspree.io/f/mnqownvq",
                 title: "Get in Touch",
                 buttonImg: "<i class='fas fa-comment' style='font-size:30px'/>",
                 description: "We'll get back to you as soon as possible.",
