--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta content="Puppala Koushik" name="author">
 
     <!-- Favicons -->
-    <link href="Images/RedK.png" rel="icon">
-    <link href="Images/RedK.png" rel="apple-touch-icon">
+    <link href="Images/RedK.webp" rel="icon">
+    <link href="Images/RedK.webp" rel="apple-touch-icon">
 
     <!-- Google Tag Manager -->
 
@@ -90,7 +90,7 @@
             <div class="container">
 
                 <div class="logo">
-                    <a href="index.html"><img src="Images/RedK.png" alt="Puppala Koushik | IIIT Raichur | IIT Hyderabad | CSE Department | Rajahmundry | Hyderabad | Raichur"></a>
+                    <a href="index.html"><img src="Images/RedK.webp" alt="PuppalaKoushik"></a>
                 </div>
 
             </div>
@@ -122,7 +122,7 @@
                         <div class="col-lg-4 ">
                             <div class="about-img">
                                 <aside>
-                                    <img src="Images/RedK.png" class="img-responsive" alt=" Profile |koushikpuppala| IIIT Raichur | IIT Hyderabad | CSE Department | Hyderabad | Raichur">
+                                    <img src="Images/RedK.webp" class="img-responsive" alt="koushikpuppala">
                                 </aside>
                             </div>
                         </div>
