--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Search Engine tags -->
     <meta content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department" name="description">
-    <meta content="Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
+    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
     <meta content="Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
     <meta content="Puppala Koushik" name="author">
 
