--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
 
                 <ul class="list-unstyled list-social">
                     <h1>
-                        <li><a href="https://www.facebook.com/puppalakoushik"><i class="ion-social-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/koushikpuppala"><i class="ion-social-instagram"></i></a></li>
-                        <li><a href="https://www.github.com/puppalakoushik"><i class="ion-social-github"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/puppalakoushik"><i class="ion-social-linkedin"></i></a></li>
-                        <li><a href="https://twitter.com/puppala_koushik"><i class="ion-social-twitter"></i></a></li>
+                        <li><a href="https://www.facebook.com/puppalakoushik" alt="Facebook"><i class="ion-social-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/koushikpuppala/" alt="Instagram"><i class="ion-social-instagram"></i></a></li>
+                        <li><a href="https://www.github.com/puppalakoushik" alt="Github"><i class="ion-social-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/puppalakoushik" alt="linkedin"><i class="ion-social-linkedin"></i></a></li>
+                        <li><a href="https://twitter.com/puppala_koushik" alt="Twitter"><i class="ion-social-twitter"></i></a></li>
                     </h1>
                 </ul>
                 <p>&copy;Copyright 2021, PuppalaKoushik</p>
