--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="container">
 
                 <div class="logo">
-                    <a href="index.html"><img src="Images/RedK.webp" alt="PuppalaKoushik"></a>
+                    <a href=#><img src="Images/RedK.webp" alt="PuppalaKoushik"></a>
                 </div>
 
             </div>
@@ -131,7 +131,7 @@
                     <div class="col-lg-7">
                         <div class="about-descr">
 
-                            <p class="p-heading">I am a student of Bachelor of Technology in Computer Science and Engineering at Indian Institute of Information Technology Raichur, which is under the Indian Institute of Technology Hyderabad.</p>
+                            <p class="p-heading">I am Koushikpuppala student of Bachelor of Technology in Computer Science and Engineering at Indian Institute of Information Technology Raichur, which is under the Indian Institute of Technology Hyderabad.</p>
                             <p class="separator">My Home town is Rajahmundry, Andhra Pradesh, and belongs to a middle-class family. I have learned so many things from my past and surrounding peoples, which motivates me to work hard to make a better future.</p>
 
                         </div>
