--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Title of the page-->
-    <title>𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
+    <title>𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
 
     <!-- Search Engine tags -->
     <meta content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department" name="description">
     <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
-    <meta content="Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
+    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
     <meta content="Puppala Koushik" name="author">
 
     <!-- Favicons -->
@@ -235,7 +235,7 @@
                     <h1>
                         <li><a href="https://www.facebook.com/puppalakoushik" alt="Facebook"><i class="ion-social-facebook"></i></a></li>
                         <li><a href="https://www.instagram.com/koushikpuppala/" alt="Instagram"><i class="ion-social-instagram"></i></a></li>
-                        <li><a href="https://www.github.com/puppalakoushik" alt="Github"><i class="ion-social-github"></i></a></li>
+                        <li><a href="https://www.github.com/puppala-koushik" alt="Github"><i class="ion-social-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/puppalakoushik" alt="linkedin"><i class="ion-social-linkedin"></i></a></li>
                         <li><a href="https://twitter.com/puppala_koushik" alt="Twitter"><i class="ion-social-twitter"></i></a></li>
                     </h1>
