--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="canonical" href="https://moz.com">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script>
@@ -90,7 +90,7 @@
             <div class="container">
 
                 <div class="logo">
-                    <a href=#><img src="Images/RedK.webp" alt="PuppalaKoushik"></a>
+                    <a href=#><img src="Images/RedK.webp" style="width:50px; margin-top: 10px; margin-left: 10px;" alt="PuppalaKoushik"></a>
                 </div>
 
             </div>
