--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="canonical" href="https://moz.com">
+    <link rel="canonical" href="https://koushikpuppala.live">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script>
