--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="yandex-verification" content="2cc0523aa6bcd8c0" />
 
     <!--Title of the page-->
     <title>𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
