--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         gtag('config', 'G-3ZKB8W63QD');
     </script>
 
+    <!--Google Workspace-->
+    <meta name="google-site-verification" content="3uf2vLm_LFBieILpQMDMjG81YSo-d4oEzvyQz3l0QKQ" />
+
+    <!-- Google Analytics -->
     <meta name="google-site-verification" content="CcAefbaEaUJPAou8hxFNMDdOXrnPABiEjKMBcRGF20Q" />
 
     <!-- Font awesome -->
