--- a/index.html
+++ b/index.html
@@ -78,15 +78,19 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top d-flex justify-content-center align-items-center header-transparent">
 
+        <!-- ======= .nav-menu ======= -->
+
+        <div class="container">
+            <a class="navbar-brand js-scroll" href="" style="color: red; font-style: italic;"><strong>Puppala Koushik</strong></a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation"></button>
+        </div>
         <nav class="nav-menu d-none d-lg-block">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-
             </ul>
-        </nav>
-        <!-- .nav-menu -->
+            <!-- .nav-menu -->
 
     </header>
     <!-- End Header -->
@@ -94,8 +98,9 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div class="hero-container">
-            <h1>Koushik Puppala</h1>
-            <h2>I'm a Student, Learner, Coder, Developer</h2>
+            <h1><strong>Koushik Puppala</strong></h1>
+            <h3 style="text-align: center; font-style: italic; font-size: 50px; color: whitesmoke;" class="intro-subtitle">A <span class="text-slider-items" style="display: none;">Student,Learner,Coder,Web Developer,Web Designer</span><span class="text-slider"></span></h3>
+
             <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
         </div>
     </section>
@@ -122,7 +127,7 @@
                                 <div class="col-lg-12">
                                     <ul>
                                         <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Koushik Puppala</li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology</li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology(First Year)</li>
                                         <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> koushikpuppala203@gmail.com</li>
                                         <li><i class="icofont-rounded-right"></i> <strong>College:</strong> Indian Institute of Information Technology, Raichur</li>
                                     </ul>
@@ -265,7 +270,7 @@
     </footer>
     <!-- End Footer -->
 
-    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+    <a href="" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
@@ -277,6 +282,8 @@
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
