--- a/index.html
+++ b/index.html
@@ -20,60 +20,14 @@
         name="tag">
     <meta content="Puppala Koushik" name="author">
 
-    <!-- Google Tag Manager -->
-
-    <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-KWBGH9Q');
-    </script>
-
-    <!-- End Google Tag Manager -->
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZKB8W63QD"></script>
-
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-3ZKB8W63QD');
-    </script>
-
-    <!--Google Workspace-->
-    <meta name="google-site-verification" content="3uf2vLm_LFBieILpQMDMjG81YSo-d4oEzvyQz3l0QKQ" />
-
-    <!-- Google Analytics -->
-    <meta name="google-site-verification" content="CcAefbaEaUJPAou8hxFNMDdOXrnPABiEjKMBcRGF20Q" />
-
     <!-- Favicons -->
     <link href="assets/img/RedK.webp" rel="icon">
     <link href="assets/img/RedK.webp" rel="apple-touch-icon">
-
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy"
-        rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -127,12 +81,15 @@
                 <div class="section-title">
                     <span>About Me</span>
                     <h2>About Me</h2>
-                    <h3 style="text-align: center; font-style: italic;">I am Koushikpuppala student of Bachelor of
-                        Technology in Computer Science and Engineering at Indian Institute of Information Technology
-                        Raichur, which is under the Indian Institute of Technology Hyderabad.</h3>
+                    <h3 style="text-align: center; font-style: italic;">Hello Friends, I am
+                        <strong>Koushik puppala</strong>
+                        student of Bachelor of Technology in Computer Science and Engineering at
+                        Indian Institute of Information Technology Raichur, which is control by the Indian Institute of
+                        Technology Hyderabad.
+                    </h3>
                     <h3 style="text-align: center; font-style: italic;">My Home town is Rajahmundry, Andhra Pradesh, and
-                        belongs to a middle-class family. I have learned so many things from my past and surrounding
-                        peoples, which motivates me to work hard to make a better future.</h3>
+                        I belong to a middle-class family. I have learned so many things from
+                        my past and surrounding people, which motivates me to work hard to make a better future.</h3>
                 </div>
 
                 <div class="row">
@@ -149,7 +106,7 @@
                                         <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of
                                             Technology(First Year)</li>
                                         <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>
-                                            koushikpuppala203@gmail.com</li>
+                                            contact@koushikpuppala.live</li>
                                         <li><i class="icofont-rounded-right"></i> <strong>College:</strong> Indian
                                             Institute of Information Technology, Raichur</li>
                                     </ul>
@@ -233,8 +190,7 @@
                                 <div class="info-box mt-4">
                                     <i class="bx bx-envelope"></i>
                                     <h3>Email Me</h3>
-                                    <p>koushikpuppala203@gmail.com</p>
-                                    <p>cs20b1015@iiitr.ac.in</p>
+                                    <p>contact@koushikpuppala.live</p>
                                 </div>
                             </div>
                         </div>
@@ -303,7 +259,7 @@
                 &copy; Copyright <strong><span>Puppala Koushik</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-                Designed by <a href="https://github.com/puppala-koushik/puppala-koushik.github.io">Koushikpuppala</a>
+                Designed by <a href="https://github.com/puppala-koushik/puppala-koushik.github.io">Puppala Koushik</a>
             </div>
         </div>
     </footer>
@@ -313,15 +269,9 @@
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
     <script src="assets/vendor/counterup/counterup.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/venobox/venobox.min.js"></script>
-    <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
     <script src="assets/vendor/typed.js/typed.min.js"></script>
 
     <!-- Template Main JS File -->
