--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <meta name="yandex-verification" content="2cc0523aa6bcd8c0" />
 
     <!--Title of the page-->
-    <title>𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
+    <meta property='og:title' content='𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌'>
+    <meta property='og:site_name' content='𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌'>
 
     <!-- Search Engine tags -->
-    <meta content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department" name="description">
-    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
-    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
-    <meta content="Puppala Koushik" name="author">
-    <meta property='og:title' content='𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌'>
+    <meta property="og:author" content="Puppala Koushik">
     <meta property='og:type' content='website'>
     <meta property='og:description' content='Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department'>
     <meta property='og:image' content='https://cdn.discordapp.com/attachments/789696376257773618/815436702846943252/RedK.webp'>
     <meta property='og:url' content='https://koushikpuppala.live'>
+    <meta property='og:tag' content='PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH'>
+    <meta property='og:keywords' content='PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH'>
 
     <!-- Favicons -->
     <link href="assets/img/RedK.webp" rel="icon">
@@ -30,7 +29,7 @@
     <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 
-    <!-- Template Main CSS File -->
+    <!-- Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
