--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="yandex-verification" content="2cc0523aa6bcd8c0" />
 
     <!--Title of the page-->
+    <title>𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
     <meta property='og:title' content='𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌'>
     <meta property='og:site_name' content='𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌'>
 
