--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
+    <script data-ad-client="ca-pub-6510875727156988" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!-- Vendor CSS Files -->
     <!-- Vendor CSS Files -->
