--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
     <script data-ad-client="ca-pub-6510875727156988" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+    <script async src="https://arc.io/widget.min.js#ZnURt9ra"></script>
     <!-- Vendor CSS Files -->
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
